// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repository directory download links component renders downloads links for path app 1`] = `
<section
  class="border-top pt-1 mt-1"
>
  <h5
    class="m-0 dropdown-bold-header"
  >
    Download this directory
  </h5>
   
  <div
    class="dropdown-menu-content"
  >
    <div
      class="btn-group ml-0 w-100"
    >
      <gl-button-stub
        buttontextclasses=""
        category="primary"
        href="http://test.com/?path=app"
        icon=""
        size="small"
        variant="confirm"
      >
        
        zip
      
      </gl-button-stub>
      <gl-button-stub
        buttontextclasses=""
        category="primary"
        href="http://test.com/?path=app"
        icon=""
        size="small"
        variant="default"
      >
        
        tar
      
      </gl-button-stub>
    </div>
  </div>
</section>
`;

exports[`Repository directory download links component renders downloads links for path app/assets 1`] = `
<section
  class="border-top pt-1 mt-1"
>
  <h5
    class="m-0 dropdown-bold-header"
  >
    Download this directory
  </h5>
   
  <div
    class="dropdown-menu-content"
  >
    <div
      class="btn-group ml-0 w-100"
    >
      <gl-button-stub
        buttontextclasses=""
        category="primary"
        href="http://test.com/?path=app/assets"
        icon=""
        size="small"
        variant="confirm"
      >
        
        zip
      
      </gl-button-stub>
      <gl-button-stub
        buttontextclasses=""
        category="primary"
        href="http://test.com/?path=app/assets"
        icon=""
        size="small"
        variant="default"
      >
        
        tar
      
      </gl-button-stub>
    </div>
  </div>
</section>
`;
